recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:6: error: type mismatch;
 found   : Int
 required: List[Int]
   return l.head;
            ^