recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if(l.tail == Nil){
    return Nil;
  }else if(l.tail.tail == Nil) {
   return l.head;
  }
  else{
    return l.head :: butLast(l.tail);
  }
}